[package]
name = "cuda_parsers"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = "0.15"
goblin = "0.5"
pretty_assertions = "1.3.0"

tracing = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
lz4 = "1.24.0"

[dev-dependencies]
async-compression = { version = "0.4.5", features = ["tokio", "zstd"] }
env_logger = "0.10.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
